# stitch-connect-python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  git_push.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_client.py
.circleci/: config.yml
client/: .openapi-generator-ignore  README.md  setup.py  tox.ini
docs/: AzureDestinationFormProperties.md  ConnectionCheck.md  ConnectionDetails.md  ConnectionStep.md  ConnectionStepProps.md  ConnectionStepPropsAnyOf.md  ConnectionStepPropsJsonSchema.md  CreateDestinationBody.md  CreateSourceBody.md  Destination.md  DestinationFormProperties.md  DestinationReportCard.md  DestinationsApi.md  ErrorObject.md  ErrorObjectError.md  FieldLevelMetadata.md  ForcedReplicationMethod.md  ForcedReplicationMethodObject.md  GoogleAnalyticsSourceFormProperties.md  GoogleAnalyticsSourceFormPropertiesReportDefinitions.md  HookNotification.md  HookNotificationConfig.md  Metadata.md  MetadataObject.md  MixpanelSourceFormProperties.md  ReplicationJob.md  S3DestinationFormProperties.md  SalesforceSourceFormProperties.md  Source.md  SourceFormProperties.md  SourceReportCard.md  SourcesApi.md  Stream.md  StreamLevelMetadata.md  StreamSchema.md  StreamUpdate.md  StreamsApi.md  StreamsUpdate.md  StreamsUpdateList.md  UpdateSourceBody.md
openapi_client/: __init__.py
src/: README.md
stitch_connect_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
templates/: README.mustache
test/: test_azure_destination_form_properties.py  test_connection_check.py  test_connection_details.py  test_connection_step.py  test_connection_step_props.py  test_connection_step_props_any_of.py  test_connection_step_props_json_schema.py  test_destination.py  (+32 more)
(+105 files in other folders)
