[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "stitch_connect_client"
author = "Annie Xu"
author-email = "axu@narrativescience.com"
home-page = "https://github.com/NarrativeScience/stitch-connect-python"
license = "BSD-3-Clause"
description-file = "README.md"
requires = [
    "certifi>=14.05.14",
    "future; python_version<='2.7'",
    "six>=1.10",
    "python_dateutil>=2.5.3",
    "setuptools>=21.0.0",
    "urllib3>=1.15.1",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=2.7,<2.8,>=3.6,<4"
keywords = "Stitch Connect,Open API,OpenAPI-Generator"

[tool.flit.sdist]
include = ["LICENSE.md"]
exclude = ["test/"]
